# macos-music-tui

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
.github/homebrew/: mmt.rb.template
.github/workflows/: ci.yml  release.yml
doc/: ARCHITECTURE.md  PLAYBACK.md  RELEASE.md
docs/: DEPLOYMENT.md
homebrew-tap/.github/workflows/: update-formula.yml
homebrew-tap/Formula/: mmt.rb
src/: accessibility.rs  app.rs  cache.rs  main.rs  music.rs  ui.rs
