[package]
name = "macos-music-tui"
version = "2026.2.1"
edition = "2021"
description = "TUI for controlling macOS Music.app with keyboard"
license = "MIT"
repository = "https://github.com/krzmknt/macos-music-tui"
keywords = ["music", "macos", "tui", "apple-music"]
categories = ["command-line-utilities"]

[[bin]]
name = "mmt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
ratatui = "0.29.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
unicode-width = "0.1"
accessibility = "0.2.0"
core-foundation = "0.10.1"
